@@ -26,7 +26,7 @@
         description=""
         handler=".setuphandlers.importFinalSteps">
       <depends name="plone-final"/>
-    </genericsetup:importStep>        
+    </genericsetup:importStep>
 
     <genericsetup:registerProfile
       name="uninstall"
