@@ -1,5 +1,8 @@
 from Products.CMFCore.utils import getToolByName
+
+
 PROFILE = "profile-collective.ckeditor:default"
+
 
 def common_upgrade(context):
     setup = getToolByName(context, 'portal_setup')
@@ -15,4 +18,3 @@ def up3411(context):
             'plugins',
             ["ajaxsave;/++resource++cke_ajaxsave/plugin.js"],
             'list')
-
